@@ -69,14 +69,14 @@ class OliveGtk:
                 "on_menuitem_branch_checkout_activate": handler.on_menuitem_branch_checkout_activate,
                 "on_menuitem_branch_commit_activate": handler.on_menuitem_branch_commit_activate,
                 "on_menuitem_branch_push_activate": handler.on_menuitem_branch_push_activate,
-                "on_menuitem_branch_pull_activate": handler.not_implemented,
+                "on_menuitem_branch_pull_activate": handler.on_menuitem_branch_pull_activate,
                 "on_menuitem_branch_status_activate": handler.on_menuitem_branch_status_activate,
                 "on_menuitem_stats_diff_activate": handler.on_menuitem_stats_diff_activate,
                 "on_menuitem_stats_log_activate": handler.not_implemented,
                 "on_menuitem_stats_infos_activate": handler.not_implemented,
                 "on_toolbutton_update_clicked": handler.not_implemented,
                 "on_toolbutton_commit_clicked": handler.on_menuitem_branch_commit_activate,
-                "on_toolbutton_pull_clicked": handler.not_implemented,
+                "on_toolbutton_pull_clicked": handler.on_menuitem_branch_pull_activate,
                 "on_toolbutton_push_clicked": handler.on_menuitem_branch_push_activate,
                 "on_treeview_right_button_press_event": handler.on_treeview_right_button_press_event,
                 "on_treeview_right_row_activated": handler.on_treeview_right_row_activated,
