@@ -1,5 +1,8 @@
 2006-08-09  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>
 
+    * olive/backend/update.py: added NotBranchError support to pull()
+    * olive/backend/__init__.py: added Branch/Pull signal
+    * olive/backend/handler.py: implemented Branch/Pull signal handler
     * olive/frontend/gtk/status.py: fixed a NotBranchError related bug
     * olive.glade: diff and status window not visible by default
 
